style.css
@font-face {  
	font-family: password;  
	src: url('font/password.ttf') format('truetype');  
}

html, body {
	height: 100%;
	width: 100%;
	padding: 0;
	margin: 0;
}

#unauthorized {
	position: fixed;
	width: 100%;
	height: 100%;
	background: url('wallpaper.png') repeat center center fixed;
}

#encryptionKey {
	width: 300px;
}

nav[role=navigation] {
	padding-right: 20px;
	padding-left: 20px;
}

#welcome {
	text-align: center;
	left: 50%;
	width: 500px;
	margin-left: -200px;
	position: absolute;
	top: 30%;
}

#authorized {
	position: relative;
	padding: 0 0 0 0;
}

#lastModified {
	display: block;
	position: absolute;
	top: 2.4em;
	right: 2em;
}

h1 {
	padding-bottom: 1.2em;
}

#decrypt {
	display: inline;
}

a:not(:last-child) {
	margin-right: .5em;
}

.hidden {
	display: none;
}

.navbar-collapse {
	padding-right: 15px !important;
}

.navbar-fixed-top {
	z-index: 9 !important;
}

#tableHeader th:last-child {
	text-align: right;
	padding-right: 21px;
}

#editModal, #masterkeyModal {
	z-index: 11;
	display: block;
	background-color: rgba(0, 0, 0, 0.5);
}

.wide-container {
	padding: 50px 27px 0 27px;
}

table#overview td:last-child {
	white-space: nowrap;
	padding-right: 15px;
}

table.comment {
	width: 100%;
	table-layout: fixed;

	border-collapse: collapse;
	border-spacing: 0;
	border: 0;
}

table.comment td {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

tr:not(.exposed) td .obscured {
	display: inline-block;
	white-space: nowrap;
	overflow: hidden;
	max-width: 4em;
	font-family: password;
	word-spacing: -.30em;
}

h2#testPhrase {
	margin-top: 1em;
	font-family: password;
	word-spacing: -.30em;
}

form.form-search {
	display: inline-block;
}

table#tableHeader {
	margin: 0; 
}

table#tableHeader th {
	padding-left: 15px;
}

table#tableHeader th:nth-child(-n+3), table#overview td:nth-child(-n+3) {
	width: 200px;
	min-width: 200px;
	max-width: 200px;
	overflow: hidden;
}

